    - fixed issue with php executing in literal blocks (Monte)

Version 1.3.0
-------------
    - moved license from GPL to LGPL (Monte)
    - implemented workaround for PHP "feature" that eats carriage returns
      if the PHP tag is at the end of the line. (Andrei)
    - removed $allow_php, added $php_handling logic (Monte)
    - added file locking to prevent reader/writer problem. (Andrei)
    - made Smarty catch unimplemented modifiers and custom functions and output
      error messages during compilation instead of failing during run time.
      (Andrei)
    - removed short-tags at the top of the smarty scripts (Monte)
    - added register_function() and register_modifier() API calls to make
      registering stuff easier. (Andrei)
    - added template results caching capability. (Monte, Andrei)
    - added optional 'options' attribute to html_options custom function
      that allows passing associative arrays for values/output. (Andrei)
    - modifier arguments can now contain '|' and ':' characters inside quoted
      strings. (Andrei)

Version 1.2.2
-------------
    - fixed bug that would not respect nested template directories and would
      put all compiled files into top-level one. (Andrei)
    - fixed bug using $PHP_VERSION instead of environment var PHP_VERSION.
      (Monte)
    - a couple small warning fixes. (Monte)

Version 1.2.1
-------------
    - added $compile_dir, removed $compile_dir_ext, simplified usage. (Monte)
    - added tips & tricks chapter to documentation. (Monte)
    - misc documentation updates. (Monte)

Version 1.2.0
-------------
    - updated documentation (Monte)
    - added file and line number information to syntax error messages. (Andrei)
    - added ability to index template vars by a key. (Andrei)

Version 1.1.0
-------------
    - misc documentation changes, official stable release

Version 1.0b
------------
    - fixed the bug that prevented using non-array values for 'loop' attribute.
      (Andrei)