@@ -1,4 +1,7 @@
-    - fixed issue with php executing in literal blocks (Monte)
+    - added ability to index looped variables by section properties, e.g.
+      $foo.index_prev/bar. (Andrei)
+    - added index_prev and index_next section properties. (Andrei)
+    - fixed issue with php executing in literal blocks. (Monte)
 
 Version 1.3.0
 -------------
